GNOME Bugzilla – Bug 729726
Fix the accelerators for next/previous in RTL
Last modified: 2018-08-03 20:18:22 UTC
Like the arrows. Alt+Right for previous and Alt+Left for next.
Created attachment 276149 [details] [review] ephy-window: Fix the accelerators for back/forward in RTL
Ping?
Created attachment 286373 [details] [review] ephy-window: Fix the accelerators for back/forward in RTL
Review of attachment 286373 [details] [review]: Thanks for the patch, and sorry for the delay. Can you rearrange the function to avoid the duplicate code when iterating over the keybindings object? I think should should only need to write that loop once.
This is a mass NEEDINFO of all Epiphany bugs with no activity in the past three years. I'm going to be automatically closing old bugs to help us focus on current problems. If you feel this bug is still relevant with Epiphany 3.26 or newer, then please leave any comment here so that I know not to close this one.
I can reproduce on 3.28.
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/epiphany/issues/239.