ephy-window: Fix the accelerators for back/forward in RTL

http://bugzilla.gnome.org/show_bug.cgi?id=729726